--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ a {
   font-size: 40px;
   font-weight: 300;
   color: #9e9e9e;
+  margin-bottom: 20px;
 }
 
 #contact {
@@ -89,7 +90,6 @@ a {
 
 button {
   cursor: pointer;
-  margin-top: 20px;
   border-radius: 100px;
   background-color: transparent;
   border: 1px solid #ffffff;
