change tap highlight color

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,14 @@ body {
   background: #58585827;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 a {
   text-decoration: none;
   margin: 0;
