--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ a {
   color: inherit;
 }
 
-#instagram {
+#twitter {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -109,6 +109,7 @@ button {
   transition: background-color 0.6s ease;
   overflow: hidden;
 }
+
 button:after {
   content: "";
   position: absolute;
@@ -121,6 +122,7 @@ button:after {
   border-radius: 100px;
   transition: 0.3s ease;
 }
+
 button:active:after {
   width: 200px;
   height: 200px;
@@ -131,19 +133,24 @@ button:active:after {
     padding: 50px 25px;
     padding-top: 25px;
   }
+
   #info {
     align-items: center;
   }
+
   #main-container h1 {
     font-size: 50px;
   }
+
   #contact {
     width: 100%;
     padding: 50px 25px;
   }
+
   #contact span {
     font-size: 25px;
   }
+
   button {
     padding: 12px 24px;
   }
