--- a/components/intro/intro.module.css
+++ b/components/intro/intro.module.css
@@ -1,14 +1,14 @@
 .name {
   font-family: Gilroy;
   font-weight: 600;
-  font-size: 26px;
+  font-size: 1.5rem;
+  line-height: 0.7rem;
   color: #170b5e;
 }
 
 .skill {
   font-family: Gilroy;
   font-weight: 500;
-  font-size: 17px;
-  line-height: 20px;
+  font-size: 1rem;
   color: #170b5e;
 }
